--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,19 @@ dependencies = [
     "dotenv (>=0.9.9,<0.10.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
-    "pydantic-settings (>=2.10.1,<3.0.0)"
+    "pydantic-settings (>=2.10.1,<3.0.0)",
+    "pytest (>=8.4.1,<9.0.0)",
+    "pytest-asyncio (>=1.1.0,<2.0.0)",
+    "aiohttp (>=3.12.15,<4.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
