--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,16 +16,11 @@ dependencies = [
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "pytest (>=8.4.1,<9.0.0)",
     "pytest-asyncio (>=1.1.0,<2.0.0)",
-    "aiohttp (>=3.12.15,<4.0.0)"
+    "aiohttp (>=3.12.15,<4.0.0)",
+    "openai (>=1.102.0,<2.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = "test_*.py"
-python_classes = "Test*"
-python_functions = "test_*"
