--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "pytest (>=8.4.1,<9.0.0)",
     "pytest-asyncio (>=1.1.0,<2.0.0)",
     "aiohttp (>=3.12.15,<4.0.0)",
-    "openai (>=1.102.0,<2.0.0)"
+    "openai (>=1.102.0,<2.0.0)",
+    "flask[asyncio] (>=3.1.2,<4.0.0)"
 ]
 
 
