--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "pytest-asyncio (>=1.1.0,<2.0.0)",
     "aiohttp (>=3.12.15,<4.0.0)",
     "openai (>=1.102.0,<2.0.0)",
-    "flask[asyncio] (>=3.1.2,<4.0.0)"
+    "flask-wtf (>=1.2.2,<2.0.0)",
+    "flask[async] (>=3.1.2,<4.0.0)"
 ]
 
 
